Todo:

+--------- V1.3.0 --------------------+
2022-3-28
1. 修改 preprocess.lua/get_61850custm(n), cst61850.lst 所在路径由 .sys 改为 upfile/61850
2022-3-13
1. 修改 main(), 增加 LOGIN 命令处理

+--------- V1.2.1 --------------------+
2021-9-16
1. 修改 preprocess.lua>>>1.2, 解决61850 版本识别失效的问题.
2. 修改 main(), 解决 28号命令"Format SD card" 未提前传送脚本的问题.

+--------- V1.2.0 --------------------+
2021-9-15
1. 修改 main(), 增加28号命令"Format SD card".

+--------- V1.1.1 --------------------+
2021-8-8
1. 修改 update.sh nandwrite 命令前增加 flash_erase 命令, 解决升级内核失败的问题.
 
+--------- V1.1.0 --------------------+
2021-6-6
1. 修改main() 增加 pause 参数处理 

+--------- V1.0.9 --------------------+
2021-5-12
1. 修正 27/b_upload.scr, 第1句错误. 
2021-5-11
1. 修改 scan_upsys.cpp, 系统文件增加 commu4scnet. 

+--------- V1.0.8 --------------------+
2021-5-7
1. TYPE 增加 “PQNet1xx/2xxD Kit”. 
2. 精简 TYPE 包含的类型.
3. 修订 “Get debug information” 脚本BUG.

+--------- V1.0.7 --------------------+
2020-12-29
1. 修改 preprocess.lua, 改进 61850 和 svx 的版本处理. 
2. 增加 preprocess.lua 的版本查看命令.

+--------- V1.0.6 --------------------+
2020-12-29
1. 修改 preprocess.lua, 改进 61850 和 svx 的版本处理. 
2020-4-1
1. 修改 scan_upsys, system 版本升到 5. 

+--------- V1.0.5 --------------------+
2019-12-10
1. 修改 scan_upsys, system 版本升到 4. 

+--------- V1.0.4 --------------------+
2019-11-21
1. 修改 scan_upsys, system 版本升到 3. 

+--------- V1.0.3 --------------------+
2019-10-6
1. 修改 preprocess.lua / create_upload(), 将 svx 处理部分移到 61850前面, 
   解决 svx 文件MD5校验失败的问题.

+--------- V1.0.2 --------------------+
2019-8-31
1. 改进了版本查看命令.

+--------- V1.0.1 --------------------+
2019-8-28
1. 修改 main(), 将 uname -srm 命令从 init.scr 中分离出来，单独执行，
   解决第一次连接服务时 temp_yes 不生效的问题。

+--------- V1.0.0 --------------------+
2019-8-8
1. 初始版本

