@@ -1,11 +1,11 @@
-ip = 192.168.1.88
+ip = 192.168.3.88
 port = 12307
-typeidx = 0
-type = 1
+typeidx = 2
+type = 13
 prog = 0xB
-force = 1
-cst61850 = 3
+force = 0
+cst61850 = 5
 reboot = 1
-vendor = 7
+vendor = 1
 kernel = 0
 pause = 0
