@@ -1,7 +1,0 @@
-主程序:
-0.4.38
-1. 增加统计数据时戳对齐功能。
-
-GUI程序:
-0.3.26
-1. 增加 “统计数据时戳对齐” 参数设置
